<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        android:autofillHints="phone"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etImage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_image"
        android:inputType="textUri"
        android:autofillHints="name"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btn_save"
        android:layout_marginTop="16dp" />
</LinearLayout>