<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical">

    <EditText
        android:id="@+id/etUserReg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_user"
        android:inputType="textPersonName"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/etPassReg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnRegisterAction"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btn_register_action"
        android:layout_marginTop="16dp" />
</LinearLayout>